# FPC_mRx

./: .gitattributes  .gitignore  README.md  ff_3v_binned_mrx.pro  find_index_mrx.pro  pyproject.toml  vdf_generation.ipynb
fipcore/: __init__.py  tester.py
fipcore/analysis/: evec_proc.py  fpc_mrx_fold.py  fpc_mrx_main.py  fpc_proc.py  jdotE_proc.py  jvec_proc.py  vdf_proc.py  vel_proc.py
fipcore/plotting/: imagecont_fpc.py  imagecont_vdf.py  imagecont_vdf_fpc.py  plt_vmap_check.py
fipcore/utils/: coord_utils.py  io_utils.py
fpc_mrx_idl_archive/: fpc_mrx.pro  fpc_mrx_setup.pro
plots/plots_fac/: mms_fpc_e_fac_0.25.tar
plots/plots_lmn/: mms_fpc_e_lmn_0.25.tar
scripts/: 12panel_binsz_compare_plt.py  12panel_vs_time_plt.py  fold_fpc_plt.py  sign_discrepancy_test.ipynb
src/: tester.py
src/analysis/: evec_proc.py  fpc_mrx_main.py  fpc_proc.py  jvec_proc.py  vdf_proc.py  vel_proc.py
src/plotting/: imagecont_fpc.py  imagecont_vdf.py  imagecont_vdf_fpc.py  rtplot.py
src/utils/: helper_utils.py  helpers.py
validation_checks/: JdotE_validation_check.ipynb  fac_validation_check.ipynb  lmn_comparison.pptx  lmn_validation_check.ipynb
