[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fipcore"
version = "0.8"
description = "FIeld Particle COrrelation for Reconnection Events"
dependencies = ["pyspedas", "numpy", "scipy", "matplotlib"]

[tool.setuptools]
packages = ["fipcore"]