[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fipcore"
version = "1.0"
description = "FIeld Particle COrrelation for Reconnection Events"
dependencies = ["pyspedas", "numpy", "scipy", "matplotlib"]

[tool.setuptools]
packages = ["fipcore"]